user_css/home.css
/* ... */
.sidebar li.profile .name,
.sidebar li.profile .job {
    font-size: 15px;
    font-weight: 400;
    color: #fff;
    white-space: nowrap;
}

.sidebar li.profile .job {
    font-size: 12px;
}

.sidebar .profile #log_out {
    position: absolute;
    top: 50%;
    right: 0;
    transform: translateY(-50%);
    background: #1d1b31;
    width: 100%;
    height: 60px;
    line-height: 60px;
    border-radius: 0px;
    transition: all 0.5s ease;
}

.sidebar.open .profile #log_out {
    width: 50px;
    background: none;
}

.home-section {
    position: relative;
    background: #E4E9F7;
    min-height: 100vh;
    top: 0;
    left: 78px;
    width: calc(100% - 78px);
    transition: all 0.5s ease;
    z-index: 2;
}

.sidebar.open~.home-section {
    left: 250px;
    width: calc(100% - 250px);
}

.home-section .text {
    display: inline-block;
    color: #11101d;
    font-size: 25px;
    font-weight: 500;
    margin: 18px
}

@media (max-width: 420px) {
    .sidebar li .tooltip {
        display: none;
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 500;
    margin: 0;
}

a:hover {
    text-decoration: none;
}

.nav-link {
    display: flex;
    align-items: center;
    margin-right: 10px;
    padding: 5px;
    background-color: #FFFFFF;
    color: #b7c9cc;
    border: 1px solid #b7c9cc;
    font-size: 1rem;
    padding: 10px 20px;
    font-weight: 600;
    border-radius: 3px;
}

.navbar .is {
    width: 30px;
    color: #9e9e9e;
    position: absolute;
    top: 4px;
    right: 0;
}

.navbar-nav .nav-link {
    padding-right: 20px;
    padding-left: 20px;
}

.navbar-collapse {
    flex-grow: unset;
}

.navbar-light .navbar-nav .nav-link:hover {
    border: 1px solid #5eba00;
    background-color: #FFFFFF;
    color: #5eba00;
}

.nav-link.active {
    border: 1px solid #5eba00;
    background-color: #FFFFFF;
    color: #5eba00 !important;
}

#MobileCategory {
    margin: 10px 0;
}

#MobileCategory .cb {
    margin-bottom: 10px;
}

#MobileCategory .mb {
    width: 100%;
    background: #fff;
    padding: 5px;
    border-radius: 5px;
    display: block;
    color: black;
    text-align: center;
    box-shadow: 0 6px 12px 0 rgba(150, 150, 150, 0.24);
    font-weight: 600;
    font-size: 1rem;
}

.nav-link svg {
    margin-right: 5px;
}

.dropdown .nav-link {
    border: none;
    background: none;
    padding: 0;
}

.dropdown .nav-link:hover {
    border: none !important;
}

.dropdown-menu {
    min-width: initial;
}

.dropdown-item {
    padding: 0 10px;
}

svg {
    cursor: pointer;
}

.navbar {
    box-shadow: 0 6px 12px 0 rgba(185, 185, 185, 0.24);
    padding: 12px;
}

.navbar-brand img {
    height: 40px;
}

body {
    min-height: 100vh;
    width: 100%;
    overflow: hidden;
    background: #dadada url('https://iili.io/X0Mry7.png') repeat;
    /*background-color: #f3f7f7;*/
    font-size: 1.2rem;
    line-height: 1.6;
    color: #39424e;
    margin-bottom: 120px;
}

.sidebar {
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 78px;
    background: #11101d;
    padding: 6px 14px;
    transition: all 0.5s ease;
}

.sidebar.open {
    width: 240px;
}

.sidebar .logo_content .logo {
    color: #fff;
    display: flex;
    height: 50px;
    width: 100;
    align-items: center;
    opacity: 0;
    pointer-events: none;
}

sidebar.open .logo_content .logo {
    opacity: 1;
    pointer-events: none;
}

html {
    position: relative;
    min-height: 100%;
}

#SearchInput input {
    height: 34px;
    color: #093661;
    -webkit-text-fill-color: #4587c5;
    background: #f7fbfe;
    box-shadow: none;
    max-width: 170px;
    border-radius: 25px;
}

.main-button:hover {
    color: white;
}

.btn {
    border-radius: 25px;
    margin: 3px;
    padding: 3px 12px;
    color: white;
}


/* End categories-menu */


/* CarouselComponent */

#CarouselComponent {
    padding: 45px 0 45px;
}

#CarouselComponent h6 {
    color: black;
    margin-bottom: 10px;
}


/* End CarouselComponent */


/* featured */

#Featured {
    margin: 30px 0;
}

#MobileCategory svg {
    margin-bottom: 5px;
    height: 16px;
    width: 16px;
}

.col-md-5ths {
    width: 9%;
    padding: 0 8px;
    box-sizing: content-box;
    display: inline-block;
}


/* featured */


/* gamelist */

#GameList {
    margin: 20px 0;
}

.category-title {
    text-transform: uppercase;
    text-align: center;
    padding: 20px 0;
}

#GameList .col-md-5cols h6 {
    color: #84cbf2;
}

.cb {
    display: flex;
    box-shadow: 0 6px 12px 0 rgba(150, 150, 150, 0.24);
    transition: all .6s ease;
    border-radius: 5px;
    margin-bottom: 20px;
    background: white;
}

.cb:hover {
    transform: scale(1.0425531915) translate3d(0, -4px, 0);
    transition-duration: .3s;
}

.cb img {
    height: 50px;
    width: 50px;
    border-radius: 5px;
    margin-right: 10px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.cb span {
    font-weight: 400;
    overflow: hidden;
    display: flex;
    align-items: center;
    color: #39424e;
    padding-right: 5px;
    border-radius: 0 16px 16px 0;
}

#TextBox h1,
h2,
h3,
h4,
h5,
h6 {
    margin-bottom: 10px;
}

#TextBox h3 {
    font-size: 20px;
}

#TextBox {
    margin: 30px 0;
}

.store img {
    height: 40px;
}

.card-header.category {
    text-transform: uppercase;
    height: 50px;
    box-shadow: 0 6px 6px 0 rgba(116, 147, 241, 0.4), inset 0 1px 3px 0 rgba(255, 210, 210, 0.23);
}

.card.category {
    border: #183484;
    margin: 20px 0;
    box-shadow: 0 6px 12px 0 rgba(173, 173, 173, 0.24);
}

#TextBox .card-content {
    background: #ffffff;
    padding: 20px;
}

#Featured img {
    width: 100%;
    border-radius: 25px;
}

.gi h5 {
    line-height: 10px;
    font-weight: 700;
    margin: 0;
    margin-top: 8px;
    white-space: nowrap;
}

.gi span {
    font-size: 13px;
    color: #7e91ab;
}

.gi .tt {
    overflow: hidden;
}
/* ... */

